// Copyright 2025 nabar
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     https://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webhunter"
version = "1.0.0"
description = "Advanced Web Reconnaissance Tool"
authors = [{name = "nabar"}]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "requests>=2.26.0",
    "python-nmap>=0.7.1",
    "pyyaml>=5.4.1",
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "masscan>=0.0.4"
]

[project.scripts]
webhunter = "webhunter.cli:main"
license = {text = "MIT"}

